--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,4 +40,12 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="25dp"/>
 
+    <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/login_test"
+            android:text="test"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="25dp"/>
+
 </LinearLayout>
