--- a/app/src/main/res/layout/content_main2.xml
+++ b/app/src/main/res/layout/content_main2.xml
@@ -12,7 +12,6 @@
     <FrameLayout
             android:id="@+id/content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/toolbar" />
+            android:layout_height="match_parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
