--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,7 +40,17 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:paddingBottom="10dp"
-            android:paddingTop="10dp" />
+            android:paddingTop="10dp"/>
+
+    <com.google.android.gms.common.SignInButton
+            android:id="@+id/google_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:paddingBottom="10dp"
+
+            android:paddingTop="10dp"/>
 
     <ProgressBar
             android:id="@+id/progressBar"
@@ -50,7 +60,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:indeterminate="true"
-            android:visibility="gone" />
+            android:visibility="gone"/>
 
     <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/login_test"
