--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
                 android:layout_gravity="center"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:spanCount="1"
-                tools:listitem="@layout/item_product" />
+                tools:listitem="@layout/item_product"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/fab"
@@ -37,6 +37,16 @@
                 android:layout_margin="@dimen/fab_margin"
                 android:tint="@color/colorWhite"
                 app:srcCompat="@android:drawable/ic_input_add"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/logout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:tint="@color/colorWhite"
+                app:srcCompat="@android:drawable/ic_delete"
+                android:layout_marginBottom="16dp"
+                android:layout_marginEnd="80dp"
+                android:layout_gravity="bottom|end"/>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
