--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -55,7 +55,7 @@
                             android:nextFocusDown="@+id/description"
                             android:textColor="@color/colorWhite"
                             android:textSize="20sp"
-                            app:theme="@style/WhiteTheme" />
+                            app:theme="@style/WhiteTheme"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -85,52 +85,71 @@
                         android:nextFocusDown="@+id/password"
                         android:textColor="@color/colorPrimaryDark"
                         android:textSize="18sp"
-                        app:theme="@style/DarkThemeTheme" />
+                        app:theme="@style/DarkThemeTheme"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
-<!--            <LinearLayout
+            <LinearLayout
+                    android:gravity="center"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:paddingBottom="5dp"
-                    android:paddingEnd="20dp"
-                    android:paddingStart="20dp"
-                    android:paddingTop="10dp">
+                    android:layout_height="wrap_content">
 
-                <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="5dp"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:text="Agregar foto de galería"
-                        android:textSize="11sp" />
+                <Button
+                        android:text="No es Humo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                <Button
+                        android:text="Es humo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                <Button
+                        android:text="Es Toxico"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
 
-                <RelativeLayout
-                        android:layout_width="100dp"
-                        android:layout_height="70dp"
-                        android:background="@color/colorPrimaryDark">
+            </LinearLayout>
 
-                    <ImageView
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
-                            android:layout_centerInParent="true"
-                            android:contentDescription="@null"
-                            android:src="@drawable/add_camera" />
+            <!--            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical"
+                                android:paddingBottom="5dp"
+                                android:paddingEnd="20dp"
+                                android:paddingStart="20dp"
+                                android:paddingTop="10dp">
 
-                    <ImageView
-                            android:id="@+id/image"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_alignParentStart="true"
-                            android:layout_alignParentTop="true"
-                            android:scaleType="centerCrop" />
+                            <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginBottom="5dp"
+                                    android:textColor="@color/colorPrimaryDark"
+                                    android:text="Agregar foto de galería"
+                                    android:textSize="11sp" />
 
-                </RelativeLayout>
+                            <RelativeLayout
+                                    android:layout_width="100dp"
+                                    android:layout_height="70dp"
+                                    android:background="@color/colorPrimaryDark">
+
+                                <ImageView
+                                        android:layout_width="35dp"
+                                        android:layout_height="35dp"
+                                        android:layout_centerInParent="true"
+                                        android:contentDescription="@null"
+                                        android:src="@drawable/add_camera" />
+
+                                <ImageView
+                                        android:id="@+id/image"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="match_parent"
+                                        android:layout_alignParentStart="true"
+                                        android:layout_alignParentTop="true"
+                                        android:scaleType="centerCrop" />
+
+                            </RelativeLayout>
 
 
-            </LinearLayout>-->
-
+                        </LinearLayout>-->
 
 
         </LinearLayout>
