--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#7BB6C4</color>
-    <color name="colorPrimaryDark">#215F60</color>
-    <color name="colorLightGray">#f1f1f1</color>
+    <color name="colorPrimary">#1089ff</color>
+    <color name="colorPrimaryDark">#23374d</color>
+    <color name="colorLightGray">#e5e5e5</color>
     <color name="colorAccent">#F6DD2C</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorDivision">#e0e0e0</color>
