--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -96,15 +96,16 @@
                 android:layout_height="wrap_content">
 
             <com.google.android.gms.common.SignInButton
+                    android:id="@+id/google_button"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:id="@+id/google_button"
                     android:layout_width="200dp"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"/>
 
             <Button
+                    android:id="@+id/login_button_gmail"
                     android:textColor="@color/colorWhite"
-                    android:id="@+id/loginButtonGmail"
                     android:background="#D44643"
                     android:textAlignment="center"
                     android:layout_width="200dp"
