--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,17 +13,17 @@
     <LinearLayout
             android:background="@drawable/shape_login"
             android:orientation="vertical"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="35dp"
             android:gravity="center"
             android:padding="20dp">
 
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Iniciar sesion con:"
-                android:layout_marginBottom="10dp"
-                android:textSize="16sp"/>
+                android:text="Iniciar sesion"
+                android:textSize="22sp"/>
 
         <!--
 
@@ -65,11 +65,79 @@
                 android:layout_height="wrap_content"/>
         -->
 
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/email_wrapper"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                app:counterEnabled="true"
+                app:counterMaxLength="100"
+                app:counterOverflowTextAppearance="@style/error_appearance_red"
+                app:counterTextAppearance="@style/error_appearance"
+                app:errorTextAppearance="@style/error_appearance_red">
+
+            <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Correo"
+                    android:imeOptions="actionNext"
+                    android:inputType="textAutoComplete|textAutoCorrect|textCapSentences"
+                    android:nextFocusDown="@+id/description"
+                    android:textSize="16sp"
+                    app:theme="@style/WhiteTheme"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/password_wrapper"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginBottom="10dp"
+                app:counterEnabled="true"
+                app:counterMaxLength="100"
+                app:counterOverflowTextAppearance="@style/error_appearance_red"
+                app:counterTextAppearance="@style/error_appearance"
+                app:errorTextAppearance="@style/error_appearance_red">
+
+            <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Contraseña"
+                    android:imeOptions="actionNext"
+                    android:inputType="textAutoComplete|textAutoCorrect|textCapSentences|textPassword"
+                    android:nextFocusDown="@+id/description"
+                    android:textSize="16sp"
+                    app:theme="@style/WhiteTheme"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/loginButtonEmail"
+                android:text="Ingresar"
+                android:textColor="@color/colorWhite"
+                android:background="#64b2cd"
+                android:layout_width="200dp"
+                android:layout_marginBottom="10dp"
+                android:layout_height="wrap_content"/>
+
+        <View
+                android:background="@color/colorDivision"
+                android:layout_width="300dp"
+                android:layout_height="2dp"/>
 
         <FrameLayout
                 android:id="@+id/facebookFragment"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp">
 
             <com.facebook.login.widget.LoginButton
                     android:id="@+id/loginButton"
@@ -77,7 +145,7 @@
                     android:layout_height="wrap_content"
                     android:visibility="gone"/>
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                     android:background="#39579a"
                     android:textColor="@color/colorWhite"
                     android:id="@+id/loginButtonFB"
@@ -85,15 +153,16 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:text="INGRESA CON FACEBOOK"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"/>
+            />
 
         </FrameLayout>
 
         <FrameLayout
                 android:id="@+id/gmailFragment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp">
 
             <com.google.android.gms.common.SignInButton
                     android:id="@+id/google_button"
@@ -103,18 +172,43 @@
                     android:layout_height="wrap_content"
                     android:visibility="gone"/>
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/login_button_gmail"
                     android:textColor="@color/colorWhite"
                     android:background="#D44643"
                     android:textAlignment="center"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:text="INGRESA CON GMAIL"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"/>
+                    android:text="INGRESA CON GMAIL"/>
 
         </FrameLayout>
+
+        <View
+                android:background="@color/colorDivision"
+                android:layout_width="300dp"
+                android:layout_height="2dp"/>
+
+        <LinearLayout
+                android:id="@+id/newUser"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="¿No tienes cuenta aún? "
+                    android:textSize="14sp"/>
+
+            <TextView
+                    android:textColor="@color/colorPrimary"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Creala aquí."
+                    android:textSize="14sp"/>
+
+        </LinearLayout>
 
 
         <androidx.appcompat.widget.AppCompatButton
