--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -65,12 +65,12 @@
 
 
     <style name="LoginTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/colorWhite</item>
-        <item name="colorPrimaryDark">@color/colorWhite</item>
-        <item name="colorAccent">@color/colorWhite</item>
-        <item name="colorControlNormal">@color/colorWhite</item>
-        <item name="colorControlActivated">@color/colorWhite</item>
-        <item name="colorControlHighlight">@color/colorWhite</item>
+        <item name="colorPrimary">@color/gray_4</item>
+        <item name="colorPrimaryDark">@color/gray_4</item>
+        <item name="colorAccent">@color/gray_4</item>
+        <item name="colorControlNormal">@color/gray_4</item>
+        <item name="colorControlActivated">@color/gray_4</item>
+        <item name="colorControlHighlight">@color/gray_4</item>
     </style>
 
 </resources>
