--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,8 +6,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:showIn="@layout/app_bar_main2"
-        tools:context=".view.ui.activity.Main2Activity">
+        tools:showIn="@layout/app_bar_main"
+        tools:context=".view.ui.activity.MainActivity">
 
     <FrameLayout
             android:id="@+id/content"
