--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,23 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.ui.activity.LoginActivity"
+        android:orientation="vertical"
+        android:layout_margin="35dp"
         android:gravity="center"
-        android:background="@drawable/quadradoscrum"
-        android:orientation="vertical">
-
-    <LinearLayout
-            android:background="@drawable/shape_login"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="35dp"
-            android:gravity="center"
-            android:padding="20dp">
+        android:padding="20dp"
+        tools:context=".view.ui.fragment.LoginFragment">
 
         <TextView
                 android:layout_width="wrap_content"
@@ -25,44 +16,6 @@
                 android:text="Iniciar sesion"
                 android:textSize="22sp"/>
 
-        <!--
-
-         <Button
-                android:background="#39579a"
-                android:textColor="@color/colorWhite"
-                android:id="@+id/loginButton"
-                android:textAlignment="center"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="INGRESA CON FACEBOOK"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"/>
-
-        <Button
-                android:textColor="@color/colorWhite"
-                android:id="@+id/google_button"
-                android:background="#D44643"
-                android:textAlignment="center"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="INGRESA CON GMAIL"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"/>
-
-                   <com.facebook.login.widget.LoginButton
-                android:id="@+id/loginButton"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:paddingBottom="10dp"
-                android:paddingTop="10dp"/>
-
-        <com.google.android.gms.common.SignInButton
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:id="@+id/google_button"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"/>
-        -->
 
         <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/email_wrapper"
@@ -209,7 +162,6 @@
 
         </LinearLayout>
 
-
         <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/login_test"
                 android:text="test"
@@ -217,7 +169,5 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"/>
-
-    </LinearLayout>
 
 </LinearLayout>
