--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -151,8 +151,7 @@
                     android:textAlignment="center"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:text="INGRESA CON FACEBOOK"
-            />
+                    android:text="INGRESA CON FACEBOOK"/>
 
         </FrameLayout>
 
