--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -120,7 +120,7 @@
                                         android:src="@drawable/add_camera" />
 
                                 <ImageView
-                                        android:id="@+id/image"
+                                        android:uidUser="@+uidUser/image"
                                         android:layout_width="match_parent"
                                         android:layout_height="match_parent"
                                         android:layout_alignParentStart="true"
