--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,7 @@
          <Button
                 android:background="#39579a"
                 android:textColor="@color/colorWhite"
-                android:id="@+id/loginButton"
+                android:uidUser="@+uidUser/loginButton"
                 android:textAlignment="center"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
@@ -40,7 +40,7 @@
 
         <Button
                 android:textColor="@color/colorWhite"
-                android:id="@+id/google_button"
+                android:uidUser="@+uidUser/google_button"
                 android:background="#D44643"
                 android:textAlignment="center"
                 android:layout_width="200dp"
@@ -50,7 +50,7 @@
                 android:layout_marginBottom="10dp"/>
 
                    <com.facebook.login.widget.LoginButton
-                android:id="@+id/loginButton"
+                android:uidUser="@+uidUser/loginButton"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:paddingBottom="10dp"
@@ -59,7 +59,7 @@
         <com.google.android.gms.common.SignInButton
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:id="@+id/google_button"
+                android:uidUser="@+uidUser/google_button"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"/>
         -->
