--- a/app/src/main/res/layout/activity_dertail_product.xml
+++ b/app/src/main/res/layout/activity_dertail_product.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.ui.activity.DetailProductActivity">
+        tools:context=".view.ui.activity.DetailArticleActivity">
     <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appbar"
             android:layout_width="match_parent"
