--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,40 +8,43 @@
         tools:context=".view.ui.fragment.HomeFragment">
 
         <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+            <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/public_url"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:text="@string/public_url"
+                    android:textAllCaps="false"
+                    android:textSize="12sp"
+                    android:layout_gravity="bottom|end"
+                    android:background="@android:color/transparent"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:shadowColor="@color/colorPrimary"
+                    tools:ignore="ContentDescription"/>
 
-                <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/public_url"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="10dp"
-                        android:text="@string/public_url"
-                        android:textAllCaps="false"
-                        android:textSize="12sp"
-                        android:layout_gravity="bottom|end"
-                        android:background="@android:color/transparent"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:shadowColor="@color/colorPrimary"
-                        tools:ignore="ContentDescription"/>
+            <androidx.cardview.widget.CardView
+                    android:id="@+id/cardView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardBackgroundColor="@color/md_grey_700"
+                    app:cardCornerRadius="0dp"
+                    app:cardElevation="5dp">
 
-                <androidx.cardview.widget.CardView
-                        android:id="@+id/cardView"
+                <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:cardCornerRadius="0dp"
-                        app:cardElevation="5dp">
+                        android:orientation="vertical">
 
                     <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:paddingStart="24dp"
+                            android:paddingEnd="24dp"
                             android:gravity="center"
                             android:orientation="horizontal">
 
@@ -50,7 +53,8 @@
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:padding="16dp"
+                                android:paddingTop="8dp"
+                                android:paddingBottom="8dp"
                                 app:errorTextAppearance="@style/error_appearance"
                                 app:theme="@style/WhiteTheme">
 
@@ -72,30 +76,72 @@
 
                         <ImageButton
                             android:id="@+id/pasteData"
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
-                            android:layout_marginEnd="16dp"
-                            android:background="@drawable/paste_border"
+                            android:padding="16dp"
                             android:tint="@color/colorWhite"
+                            android:background="@drawable/paste_border"
                             android:src="@drawable/ic_content_paste_black_24dp"
                             tools:ignore="UnusedAttribute"/>
 
                     </LinearLayout>
 
-                </androidx.cardview.widget.CardView>
+                    <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginStart="24dp"
+                            android:layout_marginEnd="24dp"
+                            android:layout_marginBottom="8dp"
+                            android:paddingStart="8dp"
+                            android:paddingEnd="8dp"
+                            android:background="@drawable/shape_likes"
+                            android:orientation="horizontal">
 
-            </LinearLayout>
+                        <androidx.appcompat.widget.AppCompatImageButton
+                                android:id="@+id/sad_button"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:padding="6dp"
+                                android:backgroundTint="@android:color/transparent"
+                                android:tint="@color/md_grey_500"
+                                android:src="@drawable/sad"/>
 
-            <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycler"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scrollbars="none"
-                    android:layout_gravity="center"
-                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                    app:spanCount="1"
-                    tools:listitem="@layout/item_product"/>
+                        <androidx.appcompat.widget.AppCompatImageButton
+                                android:id="@+id/neutral_button"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:padding="6dp"
+                                android:backgroundTint="@android:color/transparent"
+                                android:tint="@color/md_grey_500"
+                                android:src="@drawable/neutral"/>
+
+                        <androidx.appcompat.widget.AppCompatImageButton
+                                android:id="@+id/happy_button"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:padding="6dp"
+                                android:backgroundTint="@android:color/transparent"
+                                android:tint="@color/md_grey_500"
+                                android:src="@drawable/happy"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
         </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="none"
+                android:layout_gravity="center"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                app:spanCount="1"
+                tools:listitem="@layout/item_article"/>
 
 </LinearLayout>
