--- a/app/src/main/res/layout/activity_dertail_product.xml
+++ b/app/src/main/res/layout/activity_dertail_product.xml
@@ -54,23 +54,86 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                <TextView
+
+                <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/title_detail"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:background="@color/transparent"
+                        android:padding="10dp"
                         android:maxLines="1"
                         android:ellipsize="end"
-                        android:padding="15sp"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="25sp" />
+                        android:textAllCaps="false"
+                        android:textColor="@color/colorWhite"
+                        android:layout_gravity="center"
+                        android:textSize="16sp" />
 
-                <TextView
+                <com.example.scrumproyect.view.ui.utils.JustifyTextView
                         android:id="@+id/description_detail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="-5dp"
-                        android:padding="15dp"
-                        android:textSize="16sp" />
+                        android:padding="8dp"
+                        android:textSize="15sp" />
+                <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/colorPrimaryDark"/>
+
+                <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="24dp"
+                        android:layout_marginEnd="24dp"
+                        android:paddingStart="8dp"
+                        android:paddingEnd="8dp"
+                        android:background="@drawable/shape_likes"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                    <androidx.appcompat.widget.AppCompatImageButton
+                            android:id="@+id/sad_button"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="6dp"
+                            android:backgroundTint="@android:color/transparent"
+                            android:tint="@color/md_red_700"
+                            android:src="@drawable/sad"/>
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/sad_number"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                    <androidx.appcompat.widget.AppCompatImageButton
+                            android:id="@+id/neutral_button"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="6dp"
+                            android:backgroundTint="@android:color/transparent"
+                            android:tint="@color/md_yellow_700"
+                            android:src="@drawable/neutral"/>
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/neutral_number"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                    <androidx.appcompat.widget.AppCompatImageButton
+                            android:id="@+id/happy_button"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="6dp"
+                            android:backgroundTint="@android:color/transparent"
+                            android:tint="@color/md_green_700"
+                            android:src="@drawable/happy"/>
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/happy_number"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
                 <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
