--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,187 +1,259 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".view.ui.fragment.HomeFragment">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:background="@color/md_grey_300"
+              tools:context=".view.ui.fragment.HomeFragment">
 
-        <LinearLayout
+    <LinearLayout
             android:id="@+id/add_new_article"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/md_white_1000"
+            android:orientation="vertical">
+
+        <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/open_public_url"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/open_public_url"
+                android:textAllCaps="false"
+                android:textSize="12sp"
+                android:textColorHighlight="@color/transparent"
+                android:backgroundTint="@color/md_white_1000"
+                android:layout_gravity="bottom|end"
+                android:textColor="@color/colorPrimaryDark"
+                android:shadowColor="@color/colorPrimary"
+                tools:ignore="ContentDescription"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+            android:id="@+id/linear_add_post"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/public_url"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:text="@string/public_url"
-                    android:textAllCaps="false"
-                    android:textSize="12sp"
-                    android:layout_gravity="bottom|end"
-                    android:background="@android:color/transparent"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:shadowColor="@color/colorPrimary"
-                    tools:ignore="ContentDescription"/>
+        <androidx.cardview.widget.CardView
+                android:id="@+id/cardView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background_item_border"
+                app:cardCornerRadius="0dp"
+                app:cardElevation="5dp">
 
-            <androidx.cardview.widget.CardView
-                    android:id="@+id/cardView"
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/background_item_border"
-                    app:cardCornerRadius="0dp"
-                    app:cardElevation="5dp">
+                    android:paddingStart="24dp"
+                    android:paddingEnd="24dp"
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
-                <LinearLayout
-                        android:layout_width="match_parent"
+                <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/name_wrapper"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:layout_weight="1"
+                        android:paddingTop="4dp"
+                        android:paddingBottom="4dp"
+                        app:errorTextAppearance="@style/error_appearance"
+                        app:theme="@style/WhiteTheme">
 
-                    <LinearLayout
+                    <androidx.appcompat.widget.AppCompatEditText
+                            android:id="@+id/url_text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:paddingStart="24dp"
-                            android:paddingEnd="24dp"
-                            android:gravity="center"
-                            android:orientation="horizontal">
+                            android:hint="@string/url_text"
+                            android:lines="1"
+                            android:maxLines="1"
+                            android:ellipsize="end"
+                            android:imeOptions="actionDone"
+                            android:textColor="@color/colorWhite"
+                            android:textSize="14sp"
+                            app:theme="@style/WhiteTheme"/>
 
-                        <com.google.android.material.textfield.TextInputLayout
-                                android:id="@+id/name_wrapper"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:paddingTop="8dp"
-                                android:paddingBottom="8dp"
-                                app:errorTextAppearance="@style/error_appearance"
-                                app:theme="@style/WhiteTheme">
+                </com.google.android.material.textfield.TextInputLayout>
 
-                            <androidx.appcompat.widget.AppCompatEditText
-                                    android:id="@+id/url_text"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:hint="@string/url"
-                                    android:lines="1"
-                                    android:maxLines="1"
-                                    android:ellipsize="end"
-                                    android:imeOptions="actionDone"
-                                    android:textColor="@color/colorWhite"
-                                    android:textSize="16sp"
-                                    app:theme="@style/WhiteTheme"/>
+                <ImageButton
+                        android:id="@+id/pasteData"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:padding="8dp"
+                        android:tint="@color/md_white_1000"
+                        android:background="@drawable/paste_border"
+                        android:src="@drawable/ic_content_paste_black_24dp"
+                        tools:ignore="UnusedAttribute"/>
 
-                        </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
 
-                        <ImageButton
-                            android:id="@+id/pasteData"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="8dp"
-                            android:padding="16dp"
-                            android:tint="@color/colorWhite"
-                            android:background="@drawable/paste_border"
-                            android:src="@drawable/ic_content_paste_black_24dp"
-                            tools:ignore="UnusedAttribute"/>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
-                            android:layout_marginStart="24dp"
-                            android:layout_marginEnd="24dp"
-                            android:layout_marginBottom="8dp"
-                            android:paddingStart="8dp"
-                            android:paddingEnd="8dp"
-                            android:background="@drawable/shape_likes"
-                            android:orientation="horizontal">
-
-                        <androidx.appcompat.widget.AppCompatImageButton
-                                android:id="@+id/sad_button"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:padding="6dp"
-                                android:backgroundTint="@android:color/transparent"
-                                android:tint="@color/md_grey_500"
-                                android:src="@drawable/sad"/>
-
-                        <androidx.appcompat.widget.AppCompatImageButton
-                                android:id="@+id/neutral_button"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:padding="6dp"
-                                android:backgroundTint="@android:color/transparent"
-                                android:tint="@color/md_grey_500"
-                                android:src="@drawable/neutral"/>
-
-                        <androidx.appcompat.widget.AppCompatImageButton
-                                android:id="@+id/happy_button"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:padding="6dp"
-                                android:backgroundTint="@android:color/transparent"
-                                android:tint="@color/md_grey_500"
-                                android:src="@drawable/happy"/>
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-        </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
-            android:id="@+id/linear_loading"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:visibility="gone"
+            android:layout_height="wrap_content"
+            android:paddingStart="24dp"
+            android:paddingEnd="24dp"
+            android:background="@color/md_white_1000"
             android:orientation="vertical">
 
-            <ProgressBar
-                android:id="@+id/pBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:progressTint="@color/colorPrimaryDark"
-                style="?android:attr/progressBackgroundTint"/>
+            <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/description_wrapper"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="16dp"
+                    app:errorTextAppearance="@style/error_appearance"
+                    app:theme="@style/DarkThemeTheme">
 
-        </LinearLayout>
+                <androidx.appcompat.widget.AppCompatEditText
+                        android:id="@+id/description_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/description_text"
+                        android:lines="5"
+                        android:maxLines="5"
+                        android:ellipsize="end"
+                        android:imeOptions="actionDone"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="14sp"
+                        app:theme="@style/DarkThemeTheme"/>
 
-        <LinearLayout
-            android:id="@+id/linear_error"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:visibility="visible"
-            android:orientation="vertical">
+            </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
-                android:id="@+id/text_error"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/qualification_text"/>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                <androidx.appcompat.widget.AppCompatImageButton
+                        android:id="@+id/sad_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="6dp"
+                        android:tint="@color/md_grey_500"
+                        android:background="@color/transparent"
+                        android:src="@drawable/sad"/>
+
+                <androidx.appcompat.widget.AppCompatImageButton
+                        android:id="@+id/neutral_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="6dp"
+                        android:background="@color/transparent"
+                        android:tint="@color/md_grey_500"
+                        android:src="@drawable/neutral"/>
+
+                <androidx.appcompat.widget.AppCompatImageButton
+                        android:id="@+id/happy_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="6dp"
+                        android:background="@color/transparent"
+                        android:tint="@color/md_grey_500"
+                        android:src="@drawable/happy"/>
+
+                <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/cancel_public_url"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/cancel_public_url"
+                        android:textAllCaps="false"
+                        android:textSize="12sp"
+                        android:layout_gravity="bottom|end"
+                        android:backgroundTint="@color/md_white_1000"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textColorHighlight="@color/transparent"
+                        tools:ignore="ContentDescription"/>
+
+                <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/add_public_url"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/add_public_url"
+                        android:layout_weight="1"
+                        android:textAllCaps="false"
+                        android:textSize="12sp"
+                        android:layout_gravity="bottom|end"
+                        android:backgroundTint="@color/md_white_1000"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textColorHighlight="@color/transparent"
+                        tools:ignore="ContentDescription"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
+    </LinearLayout>
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            android:id="@+id/refresh"
+    <LinearLayout
+            android:id="@+id/linear_data"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbars="none"
-            android:layout_gravity="center"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:spanCount="1"
-            tools:listitem="@layout/item_article"/>
+        <LinearLayout
+                android:id="@+id/linear_loading"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:visibility="gone"
+                android:orientation="vertical">
 
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+            <ProgressBar
+                    android:id="@+id/pBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:progressTint="@color/colorPrimaryDark"
+                    style="?android:attr/progressBackgroundTint"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+                android:id="@+id/linear_error"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:visibility="visible"
+                android:orientation="vertical">
+
+            <TextView
+                    android:id="@+id/text_error"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                android:id="@+id/refresh"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scrollbars="none"
+                    android:layout_gravity="center"
+                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                    app:spanCount="1"
+                    tools:listitem="@layout/item_article"/>
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
