--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -56,6 +56,60 @@
                 android:background="@drawable/paste_border"
                 tools:ignore="ContentDescription"/>
 
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:background="@drawable/shape_likes"
+                android:gravity="center"
+                android:layout_gravity="bottom|start"
+                android:orientation="horizontal">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="4dp"
+                    android:backgroundTint="@android:color/transparent"
+                    android:tint="@color/md_red_700"
+                    android:src="@drawable/sad"/>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/sad_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/neutral_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="4dp"
+                    android:backgroundTint="@android:color/transparent"
+                    android:tint="@color/md_yellow_700"
+                    android:src="@drawable/neutral"/>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/neutral_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/happy_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="4dp"
+                    android:backgroundTint="@android:color/transparent"
+                    android:tint="@color/md_green_700"
+                    android:src="@drawable/happy"/>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/happy_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
