--- a/app/src/main/res/layout/activity_dertail_product.xml
+++ b/app/src/main/res/layout/activity_dertail_product.xml
@@ -54,7 +54,6 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-
                 <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/title_detail"
                         android:layout_width="wrap_content"
@@ -68,12 +67,31 @@
                         android:layout_gravity="center"
                         android:textSize="16sp"/>
 
-                <com.example.scrumproyect.view.ui.utils.JustifyTextView
-                        android:id="@+id/description_detail"
+                <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="8dp"
-                        android:textSize="15sp"/>
+                        android:orientation="horizontal">
+
+                    <com.example.scrumproyect.view.ui.utils.JustifyTextView
+                            android:id="@+id/description_detail"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:padding="8dp"
+                            android:textSize="15sp"/>
+
+                    <androidx.appcompat.widget.AppCompatImageButton
+                            android:id="@+id/delete_post"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="8dp"
+                            android:background="@color/transparent"
+                            android:src="@drawable/ic_delete_white_24dp"
+                            android:tint="@color/colorPrimaryDark"
+                            android:layout_gravity="center"
+                            android:textSize="16sp"/>
+
+                </LinearLayout>
                 <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -164,7 +182,6 @@
                         android:background="@color/colorPrimaryDark"/>
 
             </LinearLayout>
-
 
             <LinearLayout
                     android:id="@+id/box"
