--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -27,11 +27,11 @@
 
         <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/name_wrapper"
-                android:layout_width="200dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="16dp"
                 app:counterEnabled="true"
                 app:counterMaxLength="100"
                 app:counterOverflowTextAppearance="@style/error_appearance_red"
@@ -53,10 +53,10 @@
 
         <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/emailNew_wrapper"
-                android:layout_width="200dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
-                android:layout_marginStart="20dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginStart="24dp"
                 android:layout_marginBottom="10dp"
                 app:counterEnabled="true"
                 app:counterMaxLength="100"
@@ -79,10 +79,10 @@
 
         <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/password_wrapper"
-                android:layout_width="200dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
-                android:layout_marginStart="20dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginStart="24dp"
                 android:layout_marginBottom="10dp"
                 app:counterEnabled="true"
                 app:counterMaxLength="100"
@@ -107,8 +107,10 @@
                 android:id="@+id/register_user"
                 android:text="Registrar"
                 android:textColor="@color/colorWhite"
-                android:background="#64b2cd"
-                android:layout_width="200dp"
+                android:background="@color/colorPrimary"
+                android:layout_width="match_parent"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
                 android:layout_marginBottom="10dp"
                 android:layout_height="wrap_content"/>
 
