order by likes and yotube

--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -29,11 +30,12 @@
                 android:text="@string/link_about"
                 android:gravity="center"
                 android:textSize="16sp"
-                android:layout_gravity="bottom|center"
+                android:layout_gravity="center"
                 android:textAllCaps="false"
                 android:textColor="@color/colorWhite"
                 android:background="@drawable/link_about"
                 tools:ignore="ContentDescription"/>
+
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 
